k8s/apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
      oci.oraclecloud.com/security-rule-management-mode: "NSG"
      oci-network-load-balancer.oraclecloud.com/node-label-selector: oci-lb=j6js-public
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
