k8s/apps/gateway/httproute-sample.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catch-all
  namespace: gateway
spec:
  parentRefs:
    - name: external-gateway
  rules:
    - backendRefs:
        - name: echo
          port: 80
